test/fail/integration/_fail_grammar_if_block_imper_1.hs
main = if true then print "hello" else print "hello"